<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GuiaApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_app">Texto</string>

    <string name="options_lodging">Hospedagem</string>
    <string name="options_feed">Alimentação</string>
    <string name="options_attractive">Atrativos</string>
    <string name="options_favorites">Favoritos</string>
    <string name="options_phones">Telefones úteis</string>

    <string name="name_city">Delfinópolis</string>
    <string name="name_state">Minas Gerais</string>
</resources>
