<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="false"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="130dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:id="@+id/imageView"
                android:scaleType="center"
                android:src="@drawable/city2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_city"
                android:id="@+id/textView"
                android:layout_gravity="center"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:textIsSelectable="true"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/name_state"
                android:id="@+id/textView2"
                android:layout_gravity="center_horizontal|bottom"
                android:textColor="#ffffff" />
        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/list_border"
                android:orientation="horizontal"
                android:padding="10dp"
                android:layout_marginTop="5dp"
                android:id="@+id/option01"
                android:clickable="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ivOption01"
                    android:src="@drawable/ic_launcher"
                    android:layout_gravity="center_vertical"
                    android:background="@color/orange"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/options_lodging"
                    android:id="@+id/tvOptionName01"
                    android:textColor="@color/menu_title_row"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/list_border"
                android:orientation="horizontal"
                android:padding="10dp"
                android:layout_marginTop="5dp"
                android:id="@+id/option02"
                android:clickable="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ivOption02"
                    android:src="@drawable/ic_launcher"
                    android:layout_gravity="center_vertical"
                    android:background="@color/gray"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/options_feed"
                    android:id="@+id/tvOptionName02"
                    android:textColor="@color/menu_title_row"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/list_border"
                android:orientation="horizontal"
                android:padding="10dp"
                android:layout_marginTop="5dp"
                android:id="@+id/option03"
                android:clickable="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ivOption03"
                    android:src="@drawable/ic_launcher"
                    android:layout_gravity="center_vertical"
                    android:background="@color/green"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/options_attractive"
                    android:id="@+id/tvOptionName03"
                    android:textColor="@color/menu_title_row"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/list_border"
                android:orientation="horizontal"
                android:padding="10dp"
                android:layout_marginTop="5dp"
                android:id="@+id/option04"
                android:clickable="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ivOption04"
                    android:src="@drawable/ic_launcher"
                    android:layout_gravity="center_vertical"
                    android:background="@color/red"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/options_favorites"
                    android:id="@+id/tvOptionName04"
                    android:textColor="@color/menu_title_row"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/list_border"
                android:orientation="horizontal"
                android:padding="10dp"
                android:layout_marginTop="5dp"
                android:id="@+id/option05"
                android:clickable="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ivOption05"
                    android:src="@drawable/ic_launcher"
                    android:layout_gravity="center_vertical"
                    android:background="@color/blue"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/options_phones"
                    android:id="@+id/tvOptionName05"
                    android:textColor="@color/menu_title_row"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>